<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Text_Detector"
        android:background="@color/green"
        android:id="@+id/layout">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#81838F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/whiteBorder"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.109" />

        <ImageButton
            android:id="@+id/detector_menu"
            android:layout_width="76dp"
            android:layout_height="78dp"
            android:contentDescription="@string/menu_discription"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/menu"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#8C9EFF"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/caution"
            android:layout_width="413dp"
            android:layout_height="104dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="316dp"
            android:layout_height="283dp"
            android:contentDescription="@string/User_Image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272">

        </ImageView>

        <ScrollView
            android:layout_width="327dp"
            android:layout_height="204dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view"
            app:layout_constraintVertical_bias="1.0">


            <TextView
                android:textStyle="bold"
                android:textSize="16sp"
                android:id="@+id/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textIsSelectable="true">

            </TextView>

        </ScrollView>

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">

            <Button
                android:id="@+id/capture_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/capture"
                tools:ignore="ButtonStyle">

            </Button>

            <Button
                android:id="@+id/detect_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/detect"
                tools:ignore="ButtonStyle">

            </Button>

            <Button
                android:id="@+id/upload_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/upload"
                tools:ignore="ButtonStyle">

            </Button>


        </LinearLayout>

        <ImageButton
            android:id="@+id/copy"
            android:layout_width="37dp"
            android:layout_height="39dp"
            android:background="@color/green"
            android:contentDescription="@string/copy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/image_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.605"
            app:srcCompat="@drawable/copy" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>