<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:background="@color/white"
    tools:context=".Paper_Menu">


    <TextView
        android:id="@+id/content"
        android:layout_width="350dp"
        android:layout_height="580dp"
        android:padding="20sp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.5" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#81838F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#8C9EFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/verticalDivider"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/home"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/grey"
        android:drawableLeft="@drawable/home"
        android:paddingStart="10dp"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/verticalDivider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalDivider"
        app:layout_constraintTop_toTopOf="@+id/verticalDivider"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/textDetector"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/grey"
        android:drawableLeft="@drawable/scanner"
        android:paddingStart="5dp"
        android:text="@string/detect_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/verticalDivider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalDivider"
        app:layout_constraintTop_toBottomOf="@+id/home"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="RtlHardcoded,RtlSymmetry" />


    <Button
        android:id="@+id/whitePaper"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/grey"
        android:drawableLeft="@drawable/whitepaper"
        android:paddingStart="5dp"
        android:text="@string/white_paper"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/verticalDivider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalDivider"
        app:layout_constraintTop_toBottomOf="@+id/textDetector"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/privacy"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/grey"
        android:drawableLeft="@drawable/privacy"
        android:paddingStart="10dp"
        android:text="@string/privacy"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/verticalDivider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalDivider"
        app:layout_constraintTop_toBottomOf="@+id/whitePaper"
        app:layout_constraintVertical_bias="0.075"
        tools:ignore="RtlHardcoded,RtlSymmetry" />


    <Button
        android:id="@+id/settings"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/grey"
        android:drawableLeft="@drawable/settings"
        android:paddingStart="10dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/verticalDivider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalDivider"
        app:layout_constraintTop_toBottomOf="@+id/privacy"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <View
        android:id="@+id/transperant"
        android:layout_width="211dp"
        android:layout_height="729dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/themeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night_mode"
        app:layout_constraintBottom_toBottomOf="@+id/verticalDivider"
        app:layout_constraintEnd_toEndOf="@+id/verticalDivider"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="@+id/verticalDivider"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:layout_constraintVertical_bias="0.9"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:id="@+id/theme"
        android:layout_width="28dp"
        android:layout_height="27dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/verticalDivider"
        app:layout_constraintStart_toEndOf="@+id/themeSwitch"
        app:layout_constraintTop_toTopOf="@+id/themeSwitch"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/lightmode"
        tools:ignore="ContentDescription" />



</androidx.constraintlayout.widget.ConstraintLayout>